--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">BirthdayWishing</string>
+    <string name="registers">Register</string>
+    <string name="don_t_have_an_account">don\'t have an account</string>
+    <string name="sign_in">sign in</string>
+    <string name="forgot_password">forgot_password</string>
+    <string name="password">password</string>
+    <string name="email">email</string>
+    <string name="my_restaurant_app_app">my_restaurant_app_app</string>
+    <string name="bystant">bystant</string>
 </resources>
